--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -6,13 +6,31 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
-
+main{
+  padding: 1rem;
+}
 header {
   background-color: #404040;
   padding: 1rem;
 }
-header a{
+header a {
   color: #ffffff;
   text-decoration: none;
   font-weight: bold;
+}
+.products {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+.product {
+  border: 1px #404040 solid;
+  margin: 1rem;
+}
+.product img {
+  width: 100%;
+  max-width: 400px;
+}
+.product-info{
+  padding: 1rem;
 }
