--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -6,17 +6,21 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
-main{
-  padding: 1rem;
+
+main {
+  flex: 1;
 }
-header {
+/* header {
   background-color: #404040;
   padding: 1rem;
-}
-header a {
+} */
+/* header a {
   color: #ffffff;
   text-decoration: none;
   font-weight: bold;
+} */
+.site-container {
+  min-height: 100vh;
 }
 .products {
   display: flex;
@@ -31,6 +35,6 @@ header a {
   width: 100%;
   max-width: 400px;
 }
-.product-info{
+.product-info {
   padding: 1rem;
 }
